--- a/Index.html
+++ b/Index.html
@@ -13,4 +13,8 @@
   ZONA DE JUEGOS
    </h1>
    </div>
+   <div>
+     <h3>
+       Aqui Estaran Las Experiencias De Mis Juegos
+        </h3>
 </br>
