--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
-<html>
 <!DOCTYPE>
+<html>
   
   <body>
   <div>
@@ -18,3 +18,4 @@
        Aqui Estaran Las Experiencias De Mis Juegos
         </h3>
 </br>
+</html>
