--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-
 <html>
+<!DOCTYPE html>
   
   <body>
   <div>
@@ -15,9 +14,8 @@
    </h1>
    </div>
    <div>
+     <img src="img/Si.gif">
      <h3>
        Aqui Estaran Las Experiencias De Mis Juegos
         </h3>
 </br>
-
-</html>
