--- a/Index.html
+++ b/Index.html
@@ -14,8 +14,12 @@
    </h1>
    </div>
    <div>
-     <img src="img/Si.gif">
+     <img src="Si.gif">
      <h3>
        Aqui Estaran Las Experiencias De Mis Juegos
         </h3>
+        <h1>Brawl Stars</h1>
+        <em><h2>Nuevo Brawler</h2></em>
+        <h1>Gus</h1>
+        <br><img src="images.jpg">
 </br>
